--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,14 @@
 apply plugin: 'java'
 apply plugin: 'maven'
 
-configurations {
-    provided
-}
-
 group 'com.inkapplications'
 version '1.0.0-SNAPSHOT'
 
 uploadArchives {
     repositories.mavenDeployer {
-        repository(url: 'file:///home/max/.m2/repository')
         pom.project {
-            name 'Android Event Dispatcher'
-            artifactId 'android-event-dispatcher'
+            name 'Android Events'
+            artifactId 'android-events'
             packaging 'jar'
             description 'A collection of Android lifecycle events'
         }
