--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'java'
 apply plugin: 'maven'
 
-group 'com.inkapplications'
+group 'com.inkapplications.android'
 version '1.0.0-SNAPSHOT'
 
 uploadArchives {
     repositories.mavenDeployer {
         pom.project {
             name 'Android Events'
-            artifactId 'android-events'
+            artifactId 'events-module'
             packaging 'jar'
             description 'A collection of Android lifecycle events'
         }
