--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,73 @@
 apply plugin: 'java'
 apply plugin: 'maven'
+apply plugin: 'signing'
 
-group 'com.inkapplications.android'
-version '1.0.0-SNAPSHOT'
+group = 'com.inkapplications'
+version = '1.0.0'
+
+def isDevBuild = false
+def isReleaseBuild = false
+
+def sonatypeRepositoryUrl = ""
+
+//set build variables based on build type (release, continuous integration, development)
+if(hasProperty("release")) {
+    isReleaseBuild = true
+    sonatypeRepositoryUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+} else if (hasProperty("dev")) {
+    version += "-SNAPSHOT"
+    sonatypeRepositoryUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
+} else {
+    isDevBuild = true
+}
 
 uploadArchives {
-    repositories.mavenDeployer {
-        pom.project {
-            name 'Android Events'
-            artifactId 'events-module'
-            packaging 'jar'
-            description 'A collection of Android lifecycle events'
+    repositories {
+        if (isDevBuild) {
+            mavenLocal()
+        } else {
+            mavenDeployer {
+                repository(url: sonatypeRepositoryUrl) {
+                    authentication(userName: sonatypeUsername, password: sonatypePassword)
+                }
+
+                if(isReleaseBuild) {
+                    beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+                }
+                pom.project {
+                    name 'Android Events Module'
+                    description 'A collection of Android lifecycle events'
+                    url 'http://inkapplications.com/projects/android-events-module'
+                    artifactId 'android-events-module'
+                    packaging 'jar'
+
+
+                    scm {
+                        url 'scm:git@github.com:InkApplications/android-events-module.git'
+                        connection 'scm:git@github.com:InkApplications/android-events-module.git'
+                        developerConnection 'scm:git@github.com:InkApplications/android-events-module.git'
+                    }
+
+                    licenses {
+                        license {
+                            name 'The Apache Software License, Version 2.0'
+                            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                            distribution 'repo'
+                        }
+                    }
+
+                    developers {
+                        developer {
+                            id 'maxvandervelde'
+                            name 'Maxwell Vandervelde'
+                        }
+                    }
+                }
+            }
         }
     }
 }
+
 
 repositories {
     mavenCentral()
@@ -22,6 +76,6 @@ repositories {
 dependencies {
     compile 'com.google.android:android:4.1.+'
     compile 'com.squareup.dagger:dagger:1.1.+'
-    compile 'com.squareup.dagger:dagger-compiler:1.1+'
-    compile 'com.squareup:otto:1.3.4'
+    compile 'com.squareup.dagger:dagger-compiler:1.1.+'
+    compile 'com.squareup:otto:1.3.+'
 }
