--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ def sonatypeRepositoryUrl = ""
 if(hasProperty("release")) {
     isReleaseBuild = true
     sonatypeRepositoryUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
-} else if (hasProperty("dev")) {
+} else if (hasProperty("snapshot")) {
+    isSnapshot = true
     version += "-SNAPSHOT"
     sonatypeRepositoryUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
 } else {
